--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="screen-orientation" content="landscape" />
+    <meta name="orientation" content="landscape" />
     <meta name="description" content="A special birthday adventure for Alaa" />
     <title>Café Alaa - Birthday Adventure</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,17 +20,59 @@
         padding: 0;
         box-sizing: border-box;
       }
-      body {
+      html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
         background: #2d2d2d;
         overflow: hidden;
         font-family: 'Press Start 2P', monospace;
+        position: fixed;
+        overscroll-behavior: none;
+        -webkit-user-select: none;
+        user-select: none;
+        touch-action: none;
       }
       #root {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+      }
+      /* Landscape orientation message for portrait mode */
+      @media (orientation: portrait) {
+        body::before {
+          content: 'Please rotate your device to landscape mode';
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background: rgba(0, 0, 0, 0.9);
+          color: #FFF8F0;
+          padding: 20px;
+          border-radius: 10px;
+          font-size: 12px;
+          text-align: center;
+          z-index: 9999;
+          max-width: 80%;
+          line-height: 1.5;
+        }
+      }
+      /* Hide the message in landscape or on desktop */
+      @media (orientation: landscape) {
+        body::before {
+          display: none;
+        }
+      }
+      @media (min-width: 768px) {
+        body::before {
+          display: none;
+        }
       }
     </style>
   </head>
