--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="format-detection" content="telephone=no" />
     <meta name="screen-orientation" content="landscape" />
     <meta name="orientation" content="landscape" />
+    <meta name="theme-color" content="#1a1a2e" />
     <meta name="description" content="A special birthday adventure for Alaa" />
     <title>Café Alaa - Birthday Adventure</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +26,8 @@
       html, body {
         width: 100%;
         height: 100%;
+        min-height: 100vh;
+        min-height: -webkit-fill-available;
         margin: 0;
         padding: 0;
         background: #2d2d2d;
@@ -30,19 +35,33 @@
         font-family: 'Press Start 2P', monospace;
         position: fixed;
         overscroll-behavior: none;
+        -webkit-overflow-scrolling: none;
         -webkit-user-select: none;
         user-select: none;
         touch-action: none;
+        -webkit-tap-highlight-color: transparent;
+      }
+      html {
+        height: -webkit-fill-available;
+      }
+      /* Prevent pull-to-refresh */
+      body {
+        overscroll-behavior-y: contain;
       }
       #root {
         width: 100%;
-        height: 100%;
+        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
         display: flex;
         justify-content: center;
         align-items: center;
         position: fixed;
         top: 0;
         left: 0;
+      }
+      #game-container {
+        width: 100%;
+        height: 100%;
       }
       /* Landscape orientation message for portrait mode */
       @media (orientation: portrait) {
