--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
         width: 100%;
         height: 100%;
       }
+      /* Tap to start message */
+      .tap-message {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0, 0, 0, 0.8);
+        color: #FFF8F0;
+        padding: 15px 30px;
+        border-radius: 25px;
+        font-size: 14px;
+        z-index: 10000;
+        animation: pulse 2s infinite;
+        pointer-events: none;
+        display: none;
+      }
+      .tap-message.show {
+        display: block;
+      }
+      @keyframes pulse {
+        0%, 100% { opacity: 1; transform: translateX(-50%) scale(1); }
+        50% { opacity: 0.7; transform: translateX(-50%) scale(1.05); }
+      }
       /* Landscape orientation message for portrait mode */
       @media (orientation: portrait) {
         body::before {
@@ -97,6 +120,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="tap-message show" id="tap-message">Tap to Start Fullscreen</div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
